...
    onGuardadoClick: () -> Unit,
    onEditProfileClick: () -> Unit
) {
    val state by viewModel.uiState.collectAsState()

    Column(
        modifier = modifier.fillMaxSize().testTag("profile_screen"),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        ProfileHeader(
            userImageUrl = state.profilePicUrl,
            modifier = Modifier.padding(top = 20.dp)
        )
...
        )
        Spacer(modifier = Modifier.height(16.dp))
        Button(
            onClick = onEditProfileClick,
            colors = ButtonDefaults.buttonColors(containerColor = MaterialTheme.colorScheme.primary),
            shape = CircleShape,
            modifier = Modifier.testTag("btn_edit_profile")
        ) {
            Text(text = "Edit Profile")
        }
    }
}

...
